[package]
name = "d-modules"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-only"
authors = [ "Buidly Core Team <contact@buidly.com>"]
description = "Smart contracts modules for MultiversX blockchain"
documentation = "https://github.com/StakeGold/sc-d-modules-rs/blob/main/README.md"
repository = "https://github.com/StakeGold/sc-d-modules-rs"
keywords = ["dharithri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.38.0"